force-app/main/default/objects/SBQQ__Quote__c/fields/First_Calculated__c.field-meta.xml
<CustomField>
    <fullName>First_Calculated__c</fullName>
    <label>First Calculated</label>
    <type>Date</type>
</CustomField>