force-app/main/default/objects/SBQQ__Quote__c/fields/First_Months_Payment__c.field-meta.xml
<CustomField>
    <fullName>First_Months_Payment__c</fullName>
    <description>First Month Payment</description>
    <formula>ROUND(if(AND(SBQQ__Opportunity2__r.Billing_360_Transaction__c,NOT(ISBLANK(Prorated_Amount__c )), Prorated_Amount__c &gt;= 0,
ISPICKVAL(Selected_Payment_Type__c, &apos;Direct Monthly&apos;)
),Prorated_Amount__c,Estimated_Monthly_Payment__c) + Estimated_Upfront_Amount__c + (IF(ISBLANK(Shipping_Address_NEW__c),0,
Hardware_Sales_Tax__c + IF(AND(SBQQ__Opportunity2__r.Billing_360_Transaction__c,NOT(ISBLANK(Prorated_Amount__c )), Prorated_Amount__c &gt;= 0,ISPICKVAL(Selected_Payment_Type__c, &apos;Direct Monthly&apos;)
),Prorated_Amount_with_Tax__c-Prorated_Amount__c, Monthly_License_Sales_Tax__c) + IF(Shipping_and_Handling__c = 99999.99,0,
Shipping_and_Handling__c + S_H_Tax__c
)))-IF(AND(ISPICKVAL(Finance_Partner__c, &quot;&quot;),ISBLANK(Finance_Partner_Account__c)),Competitor_Buyout_Amount__c - Buyout_Sales_Tax__c,0)
+ ABS(IF(ISPICKVAL(Is_Installation_Reimbursable__c, &apos;Yes&apos;),Total_Estimated_Installation_Costs__c,0))
- IF(Future_Free_Months_Amount__c &gt; 0,Future_Free_Months_Amount__c - Free_Service_Sales_Tax__c,0)-IF(OTD_Amt__c &gt; 0, OTD_Amt__c - OTD_Sales_Tax__c, 0),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First monthly payment on a Direct Monthly deal, inclusive of License and Hardware cost, sales tax, and shipping and handling. IF SHIPPING AND HANDLING is 99999, IT WILL NOT BE INCLUDED (Quote document will show pending)</inlineHelpText>
    <label>First Month Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>