force-app/main/default/objects/SBQQ__Quote__c/fields/First_Purchase__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase__c</fullName>
    <formula>SBQQ__Opportunity2__r.First_Purchase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Purchase</label>
    <type>Checkbox</type>
</CustomField>