force-app/main/default/objects/SBQQ__Quote__c/fields/Flex_Bypass_Validation_Rule_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Flex_Bypass_Validation_Rule_Date_Time__c</fullName>
    <description>GTMS-26417: Flag used as a bypass for C&amp;R process</description>
    <inlineHelpText>Flag used as a bypass for C&amp;R process</inlineHelpText>
    <label>Bypass Validation Rule Date Time</label>
    <type>DateTime</type>
</CustomField>