force-app/main/default/objects/SBQQ__Quote__c/fields/Flex_Is_Rebook_Quote__c.field-meta.xml
<CustomField>
    <fullName>Flex_Is_Rebook_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rebook Quote</label>
    <type>Checkbox</type>
</CustomField>