force-app/main/default/objects/SBQQ__Quote__c/fields/Flex_Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Flex_Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-26501: Flex C&amp;R Related Opportunity (Cancel and Upgrade Opp)</description>
    <label>Related Opportunity</label>
    <referenceTo>Related_Opportunity__c</referenceTo>
    <relationshipLabel>CPQ Quotes</relationshipLabel>
    <relationshipName>RelatedQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>