force-app/main/default/objects/SBQQ__Quote__c/fields/Fourth_Year_Payment__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Year_Payment__c</fullName>
    <formula>ROUND(  
  IF(  
    AND(SBQQ__SubscriptionTerm__c &gt; 36, SBQQ__SubscriptionTerm__c &lt; 48),  
    Monthly_License_with_Tax__c * (SBQQ__SubscriptionTerm__c - 36),  
    IF(  
      SBQQ__SubscriptionTerm__c &gt;= 48,  
      Third_year_payment__c,
      0.00  
    )  
  ),  
2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fourth Year Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>