force-app/main/default/objects/SBQQ__Quote__c/fields/Free_service_months_requested__c.field-meta.xml
<CustomField>
    <fullName>Free_service_months_requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-16585 Deal Capture Accuracy</description>
    <label>Free Service Months Requested</label>
    <type>Checkbox</type>
</CustomField>