force-app/main/default/objects/SBQQ__Quote__c/fields/Free_Trial__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial__c</fullName>
    <formula>IF(
OR(ISPICKVAL(SBQQ__Opportunity2__r.Type, &quot;Free Trial Opportunity&quot;), ISPICKVAL(SBQQ__Opportunity2__r.Type, &quot;Free Trial Return&quot;)),
&quot;Yes&quot;,&quot;&quot;)</formula>
    <label>Free Trial</label>
    <type>Text</type>
</CustomField>