force-app/main/default/objects/SBQQ__Quote__c/fields/Freight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Freight_Cost__c</fullName>
    <defaultValue>99999</defaultValue>
    <inlineHelpText>Ignore if stuck in $99,999.</inlineHelpText>
    <label>Freight Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>