force-app/main/default/objects/SBQQ__Quote__c/fields/Future_Free_Months_Amount__c.field-meta.xml
<CustomField>
    <fullName>Future_Free_Months_Amount__c</fullName>
    <label>Future Free Months Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>