force-app/main/default/objects/SBQQ__Quote__c/fields/Future_Free_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Future_Free_Service_Type__c</fullName>
    <label>Future Free Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>