force-app/main/default/objects/SBQQ__Quote__c/fields/Geo_Availablity__c.field-meta.xml
<CustomField>
    <fullName>Geo_Availablity__c</fullName>
    <label>Geo Availablity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>