force-app/main/default/objects/SBQQ__Quote__c/fields/Hardware_Discount__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Discount__c</fullName>
    <label>Hardware Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>