force-app/main/default/objects/SBQQ__Quote__c/fields/Hardware_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Sales_Tax__c</fullName>
    <description>Roll up of sales tax amount for all Hardware products</description>
    <label>Hardware Sales Tax</label>
    <summarizedField>SBQQ__QuoteLine__c.VertexCPQ__Tax_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Code_Copy__c</field>
        <operation>contains</operation>
        <value>HW, ACT, CBL, ACC</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>