force-app/main/default/objects/SBQQ__Quote__c/fields/HW_CM_AHD1_count__c.field-meta.xml
<CustomField>
    <fullName>HW_CM_AHD1_count__c</fullName>
    <label>HW-CM-AHD1 count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>