force-app/main/default/objects/SBQQ__Quote__c/fields/Industrial_License_Term__c.field-meta.xml
<CustomField>
    <fullName>Industrial_License_Term__c</fullName>
    <label>Industrial License Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
            <value>
                <fullName>120</fullName>
                <isActive>false</isActive>
                <label>120</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>