force-app/main/default/objects/SBQQ__Quote__c/fields/Is_First_Invoice_Amount_Negative__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Invoice_Amount_Negative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if any first invoice payment amount (Monthly, Quarterly, Semi-Annual, or Annual) is negative.</description>
    <label>Is First Invoice Amount Negative?</label>
    <type>Checkbox</type>
</CustomField>