force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Installation_Reimbursable__c.field-meta.xml
<CustomField>
    <fullName>Is_Installation_Reimbursable__c</fullName>
    <description>Is the customer reimbursing Samsara for the installation costs?</description>
    <inlineHelpText>Is the customer reimbursing Samsara for the installation costs?</inlineHelpText>
    <label>Is Installation Reimbursable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>