force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Promo__c.field-meta.xml
<CustomField>
    <fullName>Is_Promo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Promo?</label>
    <type>Checkbox</type>
</CustomField>