force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Webstore_Upsell_Quote__c.field-meta.xml
<CustomField>
    <fullName>Is_Webstore_Upsell_Quote__c</fullName>
    <formula>SBQQ__Opportunity2__r.Is_Webstore_Upsell_Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Webstore Upsell Quote</label>
    <type>Checkbox</type>
</CustomField>