force-app/main/default/objects/SBQQ__Quote__c/fields/ISM_ISD_VP_Approval__c.field-meta.xml
<CustomField>
    <fullName>ISM_ISD_VP_Approval__c</fullName>
    <formula>IF(
AND(Blended_Discount__c*100 &gt; 20, Blended_Discount__c*100 &lt;= 35), &apos;ISM&apos;,
IF(
AND(Blended_Discount__c*100 &gt; 35, Blended_Discount__c*100 &lt;= 40), &apos;ISD&apos;,
IF(
AND(Blended_Discount__c*100 &gt; 40, Blended_Discount__c*100 &lt;= 45), &apos;VP&apos;,
&apos;Other&apos;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISM ISD VP Approval</label>
    <type>Text</type>
</CustomField>