force-app/main/default/objects/SBQQ__Quote__c/fields/isManager__c.field-meta.xml
<CustomField>
    <fullName>isManager__c</fullName>
    <formula>CONTAINS(SBQQ__SalesRep__r.UserRole.Name, &quot;ISM&quot;) ||  CONTAINS(SBQQ__SalesRep__r.UserRole.Name, &quot;Manager&quot;)</formula>
    <label>isManager</label>
    <type>Checkbox</type>
</CustomField>