force-app/main/default/objects/SBQQ__Quote__c/fields/Latest_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Close_Date__c</fullName>
    <description>Latest close date without changing the license term</description>
    <formula>SBQQ__Opportunity2__r.Latest_Close_Date__c</formula>
    <inlineHelpText>Latest close date without changing the license term</inlineHelpText>
    <label>Latest Close Date</label>
    <type>Date</type>
</CustomField>