force-app/main/default/objects/SBQQ__Quote__c/fields/LIC_PLTFM_PRO__c.field-meta.xml
<CustomField>
    <fullName>LIC_PLTFM_PRO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populates from Account</description>
    <label>LIC PLTFM PRO</label>
    <type>Checkbox</type>
</CustomField>