force-app/main/default/objects/SBQQ__Quote__c/fields/License_Term__c.field-meta.xml
<CustomField>
    <fullName>License_Term__c</fullName>
    <label>License Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>36</fullName>
                <default>true</default>
                <label>36</label>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>