force-app/main/default/objects/SBQQ__Quote__c/fields/Monthly_Credit_Remaining_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Credit_Remaining_on_Account__c</fullName>
    <formula>SBQQ__Opportunity2__r.Monthly_Credit_Remaining_on_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Credit Remaining on Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>