force-app/main/default/objects/SBQQ__Quote__c/fields/Monthly_License_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Monthly_License_Sales_Tax__c</fullName>
    <description>License Tax Charged Monthly</description>
    <formula>Round(License_Sales_Tax__c  /  SBQQ__SubscriptionTerm__c , 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly License Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>