force-app/main/default/objects/SBQQ__Quote__c/fields/Monthly_License_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Monthly_License_with_Tax__c</fullName>
    <formula>ROUND(IF(ISBLANK(Shipping_Address_NEW__c), Estimated_Monthly_Payment__c, Estimated_Monthly_Payment__c +  Monthly_License_Sales_Tax__c) , 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount customer pays on monthly basis for licenses. Monthly sales tax is included. Does not include tax if shipping address is blank.</inlineHelpText>
    <label>Monthly License with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>