force-app/main/default/objects/SBQQ__Quote__c/fields/Mulesoft_Status__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_Status__c</fullName>
    <description>Mulesoft will feed this status field (open ended) during Remorse Refund process. As the process is completed, the status will be set to Completed.</description>
    <inlineHelpText>Mulesoft will feed this status field (open ended) during Remorse Refund process. As the process is completed, the status will be set to Completed.</inlineHelpText>
    <label>Mulesoft Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>