force-app/main/default/objects/SBQQ__Quote__c/fields/Net_Amount_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_Rebate__c</fullName>
    <label>Net Amount w/o Rebate</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Type_of_Product__c</field>
        <operation>notEqual</operation>
        <value>Deal Component</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>