force-app/main/default/objects/SBQQ__Quote__c/fields/Net_New_Products__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Products__c</fullName>
    <description>Set to true if there are net new products on the quote.
Created as part of GTMS-6113</description>
    <formula>Count_of_Net_New_Products__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When checked, the Quote contains Net New Products.</inlineHelpText>
    <label>Net New Products</label>
    <type>Checkbox</type>
</CustomField>