force-app/main/default/objects/SBQQ__Quote__c/fields/New_DC_architecture__c.field-meta.xml
<CustomField>
    <fullName>New_DC_architecture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New DC architecture</label>
    <type>Checkbox</type>
</CustomField>