force-app/main/default/objects/SBQQ__Quote__c/fields/Number_of_months_of_Free_service__c.field-meta.xml
<CustomField>
    <fullName>Number_of_months_of_Free_service__c</fullName>
    <label>Number of Months of Free Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>