force-app/main/default/objects/SBQQ__Quote__c/fields/NumOfProductsNeedingApproval__c.field-meta.xml
<CustomField>
    <fullName>NumOfProductsNeedingApproval__c</fullName>
    <label>NumOfProductsNeedingApproval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>