force-app/main/default/objects/SBQQ__Quote__c/fields/of_Accessories__c.field-meta.xml
<CustomField>
    <fullName>of_Accessories__c</fullName>
    <label># of Accessories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>