force-app/main/default/objects/SBQQ__Quote__c/fields/OF_DC_Total__c.field-meta.xml
<CustomField>
    <fullName>OF_DC_Total__c</fullName>
    <description>GTMS-27663 - -1*(FFM Amount + IF 3PF is not null, then + Competitor Buyout, If Is reimburable = Yes, then + Install costs)</description>
    <formula>-1 * (Future_Free_Months_Amount__c + IF( Finance_Partner_Account__c = null,  Competitor_Buyout_Amount__c, IF(  TEXT(Is_Installation_Reimbursable__c) = &apos;Yes&apos;,  Total_Estimated_Installation_Costs__c, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OF DC Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>