force-app/main/default/objects/SBQQ__Quote__c/fields/of_HW_Products__c.field-meta.xml
<CustomField>
    <fullName>of_HW_Products__c</fullName>
    <label># of HW Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>