force-app/main/default/objects/SBQQ__Quote__c/fields/Of_LIC_Products__c.field-meta.xml
<CustomField>
    <fullName>Of_LIC_Products__c</fullName>
    <label># Of LIC Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>