force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_Type__c</fullName>
    <label>Associated Opportunity Sub Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>