force-app/main/default/objects/SBQQ__Quote__c/fields/Original_Blended_Discount__c.field-meta.xml
<CustomField>
    <fullName>Original_Blended_Discount__c</fullName>
    <label>Original Blended Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>