force-app/main/default/objects/SBQQ__Quote__c/fields/Original_License_Term__c.field-meta.xml
<CustomField>
    <fullName>Original_License_Term__c</fullName>
    <label>Original License Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>