force-app/main/default/objects/SBQQ__Quote__c/fields/Original_Selected_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Original_Selected_Payment_Type__c</fullName>
    <label>Original Selected Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Annual</fullName>
            </value>
            <value>
                <fullName>Direct Monthly</fullName>
            </value>
            <value>
                <fullName>Upfront Payments</fullName>
            </value>
            <value>
                <fullName>Direct Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Direct Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>