force-app/main/default/objects/SBQQ__Quote__c/fields/OTD_Amt__c.field-meta.xml
<CustomField>
    <fullName>OTD_Amt__c</fullName>
    <description>Created as part of Rebate GTMS- 29141</description>
    <label>One Time Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>