force-app/main/default/objects/SBQQ__Quote__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if your CPQ quote is a multiline opportunity. By checking this box, it will prevent the Shipping Address NEW field from updating the Ship To line items on your CPQ quote.</inlineHelpText>
    <label>Is Multiline?</label>
    <type>Checkbox</type>
</CustomField>