force-app/main/default/objects/SBQQ__Quote__c/fields/Override_Freight_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Override_Freight_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>LTL orders cannot be switched to Next Day Air service due to their size. Also, orders above 250 pounds MUST ship LTL, and cannot be shipped UPS Ground.</inlineHelpText>
    <label>Override Freight Shipping</label>
    <type>Checkbox</type>
</CustomField>