force-app/main/default/objects/SBQQ__Quote__c/fields/Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Owner_Country__c</fullName>
    <description>GMTS-14391
Capturing Quote Owners Country</description>
    <formula>Owner:User.Country</formula>
    <label>Owner Country</label>
    <type>Text</type>
</CustomField>