force-app/main/default/objects/SBQQ__Quote__c/fields/P_P_Pilot_Flag__c.field-meta.xml
<CustomField>
    <fullName>P_P_Pilot_Flag__c</fullName>
    <formula>$User.P_P_Pilot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P&amp;P Pilot Flag</label>
    <type>Checkbox</type>
</CustomField>