force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>This field’s value is updated via the integration.GTMS-16585</description>
    <label>Customer selected Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>