force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Formula field that brings Payment Terms field value from opportunity onto the quote object
Updated label as part of GTMS-18996</description>
    <formula>text(SBQQ__Opportunity2__r.Initial_Payment_Terms__c)</formula>
    <label>Initial Payment Terms</label>
    <type>Text</type>
</CustomField>