force-app/main/default/objects/SBQQ__Quote__c/fields/Process_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Process_Eligibility__c</fullName>
    <description>This is used by Webstore team for Digital Renewal Self-Serve Checkout process</description>
    <label>Process Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Renewals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>