force-app/main/default/objects/SBQQ__Quote__c/fields/Product_Approval__c.field-meta.xml
<CustomField>
    <fullName>Product_Approval__c</fullName>
    <formula>IF( (ProductApprovalNeeded__c  = TRUE &amp;&amp;  NOT(ISPICKVAL(SBQQ__Status__c,&quot;Approved&quot;))) &amp;&amp; (  NumOfProductsNeedingApproval__c  &gt;  ApprovedProductsCount__c ), IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;Yes:&quot;,20,20)+ &quot; Preview Approvals After Saving&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;No:&quot;, 20, 20) + &quot; No Approval Needed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Approval?</label>
    <type>Text</type>
</CustomField>