force-app/main/default/objects/SBQQ__Quote__c/fields/Product_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Product_Approval_Needed__c</fullName>
    <formula>IF(NumOfProductsNeedingApproval__c &gt;  ApprovedProductsCount__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Approval Needed?</label>
    <type>Checkbox</type>
</CustomField>