force-app/main/default/objects/SBQQ__Quote__c/fields/ProductApprovalNeeded__c.field-meta.xml
<CustomField>
    <fullName>ProductApprovalNeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProductApprovalNeeded</label>
    <type>Checkbox</type>
</CustomField>