force-app/main/default/objects/SBQQ__Quote__c/fields/Prorated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Amount__c</fullName>
    <description>GTMS-27140</description>
    <label>Prorated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>