force-app/main/default/objects/SBQQ__Quote__c/fields/Prorated_Amount_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Amount_with_Tax__c</fullName>
    <formula>IF(Sales_Tax_Rate__c &lt;&gt;99999,Prorated_Amount__c + Prorated_Amount__c*Sales_Tax_Rate__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prorated Amount with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>