force-app/main/default/objects/SBQQ__Quote__c/fields/Quarterly_License_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_License_With_Tax__c</fullName>
    <formula>Quarterly_Payment__c + Quarterly_License_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly License With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>